--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -1,10 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=1280,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
+    <title>学校网站登录页面模板html源码</title>
+    <link href="../static/css/vendor.style.css" rel="stylesheet">
+    <link href="../static/css/login.style.css" rel="stylesheet">
 </head>
 <body>
-Hello
+<div id="mount">
+    <div data-reactroot="">
+        <div class="_1RxfFVyy86UE1t7lqCDcGD">
+            <div class="_3CkMCIo8-RsWtcLQqsuKBh">
+                <div class="_3lr3h2hawOi8pO8fYLQcjI">教师端登录</div>
+                <div class="_6vZdUKmPDGrrza0LnuXD9">
+                    <div>
+                        <div class="mobileIcon"></div>
+                        <input type="text" maxlength="11" autocomplete="off" placeholder="请输入十一位手机号码">
+                        <p class="_2nSTvdgBwioyepYsyeaVPN"></p>
+                    </div>
+                </div>
+                <div class="_6vZdUKmPDGrrza0LnuXD9">
+                    <div>
+                        <div class="passwordIcon"></div>
+                        <input type="password" autocomplete="off" placeholder="请输入6-20位密码">
+                        <p class="_2nSTvdgBwioyepYsyeaVPN"></p>
+                    </div>
+                </div>
+                <div class="_6vZdUKmPDGrrza0LnuXD9"><a class="_2ZggRBvDTyawWaQQ6ambu4">登录</a></div>
+                <div class="_6vZdUKmPDGrrza0LnuXD9">
+                    <div>
+                        <p class="_2owYBOfa1UIX-AfegSAhj7"><a href="">快速注册</a><span></span></p>
+                        <a href="" class="_3x9qBnGOvjSE2ZmDfi1w5g">忘记密码</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
