python绘制matplotlib五边形雷达图

--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -329,8 +329,9 @@
                         </div>
                         <h5 class="header-title mb-4 mt-0">周期记录
                         </h5>
-                        <canvas id="lineChart" height="80">
-                        </canvas>
+                        <div>
+                            <img src="/static/image/2.png"/>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -345,9 +346,7 @@
                         </div>
                         <h5 class="header-title mb-4 mt-0">综合发展能力</h5>
                         <div>
-                            <canvas id="dash-doughnut" height="200">
 
-                            </canvas>
                         </div>
                         <ul class="list-unstyled list-inline text-center mb-0 mt-3">
                             <li class="mb-2 list-inline-item text-muted font-13">
