--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -321,16 +321,17 @@
                     <div class="card-body">
                         <div class="btn-group btn-group-toggle float-right" data-toggle="buttons">
                             <label class="btn btn-primary btn-sm active">
-                                <input type="radio" name="options" id="option1" checked="">本周（蓝）
+                                <input type="radio" name="options" id="option1" checked="">同学一（左）
                             </label>
                             <label class="btn btn-primary btn-sm">
-                                <input type="radio" name="options" id="option2">上周（红）
+                                <input type="radio" name="options" id="option2">同学二（右）
                             </label>
                         </div>
                         <h5 class="header-title mb-4 mt-0">周期记录
                         </h5>
-                        <canvas id="lineChart" height="80">
-                        </canvas>
+                        <div>
+                            <img src="/static/image/1.png"/>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -345,9 +346,7 @@
                         </div>
                         <h5 class="header-title mb-4 mt-0">综合发展能力</h5>
                         <div>
-                            <canvas id="dash-doughnut" height="200">
 
-                            </canvas>
                         </div>
                         <ul class="list-unstyled list-inline text-center mb-0 mt-3">
                             <li class="mb-2 list-inline-item text-muted font-13">
