图片大小调整

--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -330,7 +330,7 @@
                         <h5 class="header-title mb-4 mt-0">周期记录
                         </h5>
                         <div>
-                            <img src="/static/image/1.png"/>
+                            <img height="100%" width="100%" src="/static/image/1.png"/>
                         </div>
                     </div>
                 </div>
