网页更改变动、数据库录入数据

--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -321,13 +321,13 @@
                     <div class="card-body">
                         <div class="btn-group btn-group-toggle float-right" data-toggle="buttons">
                             <label class="btn btn-primary btn-sm active">
-                                <input type="radio" name="options" id="option1" checked="">同学一（左）
+                                <input type="radio" name="options" id="option1" checked="">用户（左）
                             </label>
                             <label class="btn btn-primary btn-sm">
-                                <input type="radio" name="options" id="option2">同学二（右）
+                                <input type="radio" name="options" id="option2">平均（右）
                             </label>
                         </div>
-                        <h5 class="header-title mb-4 mt-0">周期记录
+                        <h5 class="header-title mb-4 mt-0">成绩雷达图对比
                         </h5>
                         <div>
                             <img height="100%" width="100%" src="/static/image/1.png"/>
@@ -344,27 +344,36 @@
 
                             </a>
                         </div>
-                        <h5 class="header-title mb-4 mt-0">综合发展能力</h5>
+                        <!--                        <h5 class="header-title mb-4 mt-0">综合发展能力</h5>-->
                         <div>
-
+                            <h6 class="header-title mb-4 mt-0">直达链接</h6></br>
+                            <a href="https://www.hunnu.edu.cn/">湖南师范大学官网</a></br></br>
+                            <a href="https://jwc.hunnu.edu.cn/">湖南师范大学教务处</a></br></br>
+                            <a href="http://jwglnew.hunnu.edu.cn">湖南师范大学教务系统</a></br></br>
+                            <a href="https://stustar.hunnu.edu.cn/">湖南师范大学学生工作处</a></br></br>
+                            <a href="https://www.neea.edu.cn/">中国教育考试网</a></br></br>
+                            <a href="https://cy.ncss.cn/">全国大学生创业服务网</a></br></br>
+                            <a href="https://www.guoxinlanqiao.com/">蓝桥杯大赛官网</a></br></br>
+                            <a href="https://gplt.patest.cn/regulation">天梯赛大赛官网</a></br></br>
+                            <a href="https://www.csdn.net/">CSDN-专业开发者社区</a></br></br>
                         </div>
-                        <ul class="list-unstyled list-inline text-center mb-0 mt-3">
-                            <li class="mb-2 list-inline-item text-muted font-13">
-                                <i class="mdi mdi-label text-success mr-2">
+                        <!--                        <ul class="list-unstyled list-inline text-center mb-0 mt-3">-->
+                        <!--                            <li class="mb-2 list-inline-item text-muted font-13">-->
+                        <!--                                <i class="mdi mdi-label text-success mr-2">-->
 
-                                </i>优秀
-                            </li>
-                            <li class="mb-2 list-inline-item text-muted font-13">
-                                <i class="mdi mdi-label text-danger mr-2">
+                        <!--                                </i>优秀-->
+                        <!--                            </li>-->
+                        <!--                            <li class="mb-2 list-inline-item text-muted font-13">-->
+                        <!--                                <i class="mdi mdi-label text-danger mr-2">-->
 
-                                </i>不合格
-                            </li>
-                            <li class="mb-2 list-inline-item text-muted font-13">
-                                <i class="mdi mdi-label text-warning mr-2">
+                        <!--                                </i>不合格-->
+                        <!--                            </li>-->
+                        <!--                            <li class="mb-2 list-inline-item text-muted font-13">-->
+                        <!--                                <i class="mdi mdi-label text-warning mr-2">-->
 
-                                </i>良好
-                            </li>
-                        </ul>
+                        <!--                                </i>良好-->
+                        <!--                            </li>-->
+                        <!--                        </ul>-->
                     </div>
                 </div>
 
