材料列表显示

--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -100,19 +100,19 @@
                         <a href="#">
                             <i class="dripicons-jewel">
 
-                            </i>发展成绩输入
+                            </i>提交材料
                         </a>
                         <ul class="submenu megamenu">
                             <li>
                                 <ul>
                                     <li>
-                                        <a href="ui-alerts.html">成绩输入</a>
+                                        <a href="tables-editable.html">创新创业成绩材料</a>
                                     </li>
                                     <li>
-                                        <a href="ui-cards.html">成绩测算</a>
+                                        <a href="ui-cards.html">管理实践成绩材料</a>
                                     </li>
                                     <li>
-                                        <a href="ui-alertify.html">评价标准</a>
+                                        <a href="ui-alertify.html">综合发展成绩材料</a>
                                     </li>
 
                                 </ul>
