--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -357,6 +357,12 @@
                             <a href="https://gplt.patest.cn/regulation">天梯赛大赛官网</a></br></br>
                             <a href="https://www.csdn.net/">CSDN-专业开发者社区</a></br></br>
                         </div>
+                        </br></br>
+                        <div>
+                            <h6 class="header-title mb-4 mt-0"><font color="red">学业预警情况</font></h6>
+                            <span><font color="red"><strong>不满足毕业要求</strong></font></span></br></br>
+                            <a href="templates/xueyeyuji.html"><u>详细展开</u></a></br></br>
+                        </div>
                         <!--                        <ul class="list-unstyled list-inline text-center mb-0 mt-3">-->
                         <!--                            <li class="mb-2 list-inline-item text-muted font-13">-->
                         <!--                                <i class="mdi mdi-label text-success mr-2">-->
