学业预警超链接，简便提示对接调用

--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -361,7 +361,7 @@
                         <div>
                             <h6 class="header-title mb-4 mt-0"><font color="red">学业预警情况</font></h6>
                             <span><font color="red"><strong>不满足毕业要求</strong></font></span></br></br>
-                            <a href="templates/xueyeyuji.html"><u>详细展开</u></a></br></br>
+                            <a href="Academic_Early_Warning.html"><u>详细展开</u></a></br></br>
                         </div>
                         <!--                        <ul class="list-unstyled list-inline text-center mb-0 mt-3">-->
                         <!--                            <li class="mb-2 list-inline-item text-muted font-13">-->
