--- a/USTD_Dev_all/templates/Academic_Early_Warning.html
+++ b/USTD_Dev_all/templates/Academic_Early_Warning.html
@@ -10,10 +10,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<link rel="shortcut icon" href="https://www.17sucai.com/2022/5/ekow512451/assets/images/favicon.ico">
 		<!-- X-editable css -->
-		<link type="text/css" href="static/css/bootstrap-editable.css" rel="stylesheet">
-		<link href="static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-		<link href="static/css/icons.css" rel="stylesheet" type="text/css">
-		<link href="static/css/style.css" rel="stylesheet" type="text/css">
+		<link type="text/css" href="/static/css/bootstrap-editable.css" rel="stylesheet">
+		<link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+		<link href="/static/css/icons.css" rel="stylesheet" type="text/css">
+		<link href="/static/css/style.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<!-- Loader -->
@@ -35,15 +35,16 @@
 							<li class="list-inline-item dropdown notification-list hide-phone"><a
 									class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown"
 									href="#" role="button" aria-haspopup="false" aria-expanded="false">Chinese <img
-										src="static/picture/chinese_fiag.jpg" class="ml-2" height="16" alt=""></a>
+									src="/static/picture/chinese_fiag.jpg" class="ml-2" height="16" alt=""></a>
 								<div class="dropdown-menu dropdown-menu-right language-switch"><a class="dropdown-item"
-										href="#"><img src="static/picture/italy_flag.jpg" alt=""
-											height="16"><span>Italian </span></a><a class="dropdown-item" href="#"><img
-											src="static/picture/french_flag.jpg" alt="" height="16"><span>French
+																								  href="#"><img
+										src="/static/picture/italy_flag.jpg" alt=""
+										height="16"><span>Italian </span></a><a class="dropdown-item" href="#"><img
+										src="/static/picture/french_flag.jpg" alt="" height="16"><span>French
 										</span></a><a class="dropdown-item" href="#"><img
-											src="static/picture/spain_flag.jpg" alt="" height="16"><span>Spanish
+										src="/static/picture/spain_flag.jpg" alt="" height="16"><span>Spanish
 										</span></a><a class="dropdown-item" href="#"><img
-											src="static/picture/russia_flag.jpg" alt="" height="16"><span>Russian
+										src="/static/picture/russia_flag.jpg" alt="" height="16"><span>Russian
 										</span></a></div>
 							</li><!-- notification-->
 							<li class="list-inline-item dropdown notification-list"><a
@@ -56,18 +57,18 @@
 									<div class="dropdown-item noti-title">
 										<h5><span class="badge badge-danger float-right">221</span>Messages</h5>
 									</div><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
-										<div class="notify-icon"><img src="static/picture/avatar-2.jpg" alt="user-img"
-												class="img-fluid rounded-circle"></div>
+									<div class="notify-icon"><img src="/static/picture/avatar-2.jpg" alt="user-img"
+																  class="img-fluid rounded-circle"></div>
 										<p class="notify-details"><b>Charles M. Jones</b><small class="text-muted">Dummy
 												text of the printing and typesetting industry.</small></p>
 									</a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
-										<div class="notify-icon"><img src="static/picture/avatar-3.jpg" alt="user-img"
-												class="img-fluid rounded-circle"></div>
+									<div class="notify-icon"><img src="/static/picture/avatar-3.jpg" alt="user-img"
+																  class="img-fluid rounded-circle"></div>
 										<p class="notify-details"><b>Thomas J. Mimms</b><small class="text-muted">You
 												have 87 unread messages</small></p>
 									</a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
-										<div class="notify-icon"><img src="static/picture/avatar-4.jpg" alt="user-img"
-												class="img-fluid rounded-circle"></div>
+									<div class="notify-icon"><img src="/static/picture/avatar-4.jpg" alt="user-img"
+																  class="img-fluid rounded-circle"></div>
 										<p class="notify-details"><b>Luis M. Konrad</b><small class="text-muted">It is a
 												long established fact that a reader will</small></p>
 									</a><!-- All--><a href="javascript:void(0);"
@@ -104,8 +105,8 @@
 							<li class="list-inline-item dropdown notification-list"><a
 									class="nav-link dropdown-toggle arrow-none waves-effect nav-user"
 									data-toggle="dropdown" href="#" role="button" aria-haspopup="false"
-									aria-expanded="false"><img src="static/picture/avatar-1.jpg" alt="user"
-										class="rounded-circle"></a>
+									aria-expanded="false"><img src="/static/picture/avatar-1.jpg" alt="user"
+															   class="rounded-circle"></a>
 								<div class="dropdown-menu dropdown-menu-right profile-dropdown  border-0">
 									<!-- item-->
 									<div class="dropdown-item noti-title">
@@ -227,20 +228,20 @@
 			</div>
 		</footer><!-- End Footer -->
 		<!-- jQuery -->
-		<script src="static/js/jquery.min.js"></script>
-		<script src="static/js/popper.min.js"></script>
-		<script src="static/js/bootstrap.min.js"></script>
-		<script src="static/js/modernizr.min.js"></script>
-		<script src="static/js/waves.js"></script>
-		<script src="static/js/jquery.slimscroll.js"></script>
-		<script src="static/js/jquery.nicescroll.js"></script>
-		<script src="static/js/jquery.scrollTo.min.js"></script><!-- KNOB JS -->
-		<script src="static/js/excanvas.js"></script>
-		<script src="static/js/jquery.knob.js"></script><!-- XEditable Plugin -->
-		<script src="static/js/moment.js"></script>
-		<script src="static/js/bootstrap-editable.min.js"></script>
-		<script src="static/js/xeditable.js"></script><!-- App js -->
-		<script src="static/js/app.js"></script>
+		<script src="/static/js/jquery.min.js"></script>
+		<script src="/static/js/popper.min.js"></script>
+		<script src="/static/js/bootstrap.min.js"></script>
+		<script src="/static/js/modernizr.min.js"></script>
+		<script src="/static/js/waves.js"></script>
+		<script src="/static/js/jquery.slimscroll.js"></script>
+		<script src="/static/js/jquery.nicescroll.js"></script>
+		<script src="/static/js/jquery.scrollTo.min.js"></script><!-- KNOB JS -->
+		<script src="/static/js/excanvas.js"></script>
+		<script src="/static/js/jquery.knob.js"></script><!-- XEditable Plugin -->
+		<script src="/static/js/moment.js"></script>
+		<script src="/static/js/bootstrap-editable.min.js"></script>
+		<script src="/static/js/xeditable.js"></script><!-- App js -->
+		<script src="/static/js/app.js"></script>
 	</body>
 </html>
-<script src="static/js/console-ban.min.js"></script>
+<script src="/static/js/console-ban.min.js"></script>
