--- a/USTD_Dev_all/templates/test.html
+++ b/USTD_Dev_all/templates/test.html
@@ -6,17 +6,9 @@
 </head>
 <body>
 <table>
-
-    {% for row in shenhe_list %}
-    <tr>
-        <td>{{ row.id }}</td>
-        <td>{{ row.miaoshu }}</td>
-        <td>{{ row.leibie }}</td>
-        <td>{{ row.image }}</td>
-    </tr>
-    {% endfor %}
+删除成功
+    <a href="tables-editable.html">返回</a>
 </table>
-
 
 </body>
 </html>
