--- a/USTD_Dev_all/templates/login.html
+++ b/USTD_Dev_all/templates/login.html
@@ -14,24 +14,24 @@
         <div class="_1RxfFVyy86UE1t7lqCDcGD">
             <div class="_3CkMCIo8-RsWtcLQqsuKBh">
                 <div class="_3lr3h2hawOi8pO8fYLQcjI">用户登录</div>
-                <form action="" method="post" name="login">
+                <form action="login/" method="post">
                     {% csrf_token %}
                     <div class="_6vZdUKmPDGrrza0LnuXD9">
                         <div>
                             <div class="mobileIcon"></div>
-                            <input type="text" name="id" maxlength="11" autocomplete="off" placeholder="请输入十一位手机号码">
+                            <input type="text" name="id" autocomplete="off">
                             <p class="_2nSTvdgBwioyepYsyeaVPN"></p>
                         </div>
                     </div>
                     <div class="_6vZdUKmPDGrrza0LnuXD9">
                         <div>
                             <div class="passwordIcon"></div>
-                            <input type="password" name="pwd" autocomplete="off" placeholder="请输入6-20位密码">
+                            <input type="password" name="pwd" autocomplete="off">
                             <p class="_2nSTvdgBwioyepYsyeaVPN"></p>
                         </div>
                     </div>
-                    <div class="_6vZdUKmPDGrrza0LnuXD9"><a href="javascript:document.login.submit()"
-                                                           class="_2ZggRBvDTyawWaQQ6ambu4">登录</a>
+                    <div class="_6vZdUKmPDGrrza0LnuXD9">
+                        <input type="submit" value="登录" class="_2ZggRBvDTyawWaQQ6ambu4">登录</a>
                     </div>
                 </form>
 
