主界面用户session调用完成，学业预警功能完善调用数据完成

--- a/USTD_Dev_all/templates/Academic_Early_Warning.html
+++ b/USTD_Dev_all/templates/Academic_Early_Warning.html
@@ -107,10 +107,11 @@
 									data-toggle="dropdown" href="#" role="button" aria-haspopup="false"
 									aria-expanded="false"><img src="/static/picture/avatar-1.jpg" alt="user"
 															   class="rounded-circle"></a>
+								<span>{{ name }}</span>
 								<div class="dropdown-menu dropdown-menu-right profile-dropdown  border-0">
 									<!-- item-->
 									<div class="dropdown-item noti-title">
-										<h5>Welcome</h5>
+										<h5>Welcome,{{ name }}</h5>
 									</div><a class="dropdown-item" href="#"><i
 											class="mdi mdi-account-circle m-r-5 text-muted"></i>Profile</a><a
 										class="dropdown-item" href="#"><i class="mdi mdi-wallet m-r-5 text-muted"></i>My
@@ -172,43 +173,85 @@
 									<thead>
 										<tr>
 											<th style="width: 50%;">项目</th>
-											<th>成绩</th>
+											<th>成绩/及格分数</th>
 											<th>是否合格</th>
 										</tr>
 									</thead>
 									<tbody>
-										<tr>
-											<td>最低学分要求</td>
-											<td><a href="#" id="inline-xuefen" data-pk="1">/24</a></td>
-													<td>是</td>
-										</tr>
-										<tr>
-											<td>必修课成绩</td>
-											<td><a href="#" id="inline-bixiu" data-pk="1">/20</a></td>
-													<td>是</td>
-										</tr>
-										<tr>
-											<td>选修课成绩</td>
-											<td><a href="#" id="inline-xuanxiu" data-pk="1" data-value="">/4</a></td>
-													<td>是</td>
-										</tr>
-										<tr>
-											<td>体测成绩</td>
-											<td><a href="#" id="inline-tiyu" data-type="select" data-pk="1"
-													data-value="0" data-source="/status"
-													data-title="Select status">/60</a></td>
+									<tr>
+										<td>最低学分要求</td>
+										<td><a href="#" id="inline-xuefen" data-pk="1">
+											{% if minimum >= 24 %}
+											<font color="green">{{ minimum }}</font>/24</a>
+											{% endif %}
+											{% if minimum < 24 %}
+											<font color="red">{{ minimum }}</font>/24</a>
+											{% endif %}
+										</td>
+										<td>是</td>
+									</tr>
+									<tr>
+										<td>必修课成绩</td>
+										<td><a href="#" id="inline-bixiu" data-pk="1">
+											{% if compulsory >= 20 %}
+											<font color="green">{{ compulsory }}</font>/20</a>
+											{% endif %}
+											{% if compulsory < 20 %}
+											<font color="red">{{ compulsory }}</font>/20</a>
+											{% endif %}
+										</td>
+										<td>是</td>
+									</tr>
+									<tr>
+										<td>选修课成绩</td>
+										<td><a href="#" id="inline-xuanxiu" data-pk="1" data-value="">
+											{% if elective >= 4 %}
+											<font color="green">{{ elective }}</font>/4</a>
+											{% endif %}
+											{% if elective < 4 %}
+											<font color="red">{{ elective }}</font>/4</a>
+											{% endif %}
+										</td>
+										<td>是</td>
+									</tr>
+									<tr>
+										<td>体测成绩</td>
+										<td><a href="#" id="inline-tiyu" data-type="select" data-pk="1"
+											   data-value="0" data-source="/status"
+											   data-title="Select status">
+											{% if physical >= 60 %}
+											<font color="green">{{ physical }}</font>/60</a>
+											{% endif %}
+											{% if physical < 60 %}
+											<font color="red">{{ physical }}</font>/60</a>
+											{% endif %}
+										</td>
 													<td>是</td>
 										</tr>
 										<tr>
 											<td>四级成绩</td>
 											<td><a href="#" id="inline-siji" data-type="combodate"
-													data-pk="1" data-title="">/425</a></td>
+												   data-pk="1" data-title="">
+												{% if cet4 >= 425 %}
+												<font color="green">{{ cet4 }}</font>/425</a>
+												{% endif %}
+												{% if cet4 < 425 %}
+												<font color="red">{{ cet4 }}</font>/425</a>
+												{% endif %}
+											</td>
 													<td>是</td>
 										</tr>
 										<tr>
-											<td>普通话</td>
+											<td>普通话成绩</td>
 											<td><a href="#" id="inline-putonghua" data-type="textarea" data-pk="1"
-													data-title="Enter comments">/80</a></td>
+												   data-title="Enter comments">
+												{% if mandarin >= 80 %}
+												<font color="green">{{ mandarin }}</font>/80</a>
+												{% endif %}
+												{% if mandarin < 80 %}
+												<font color="red">{{ mandarin }}</font>/80</a>
+												{% endif %}
+											</td>
 													<td>是</td>
 										</tr>
 									</tbody>
