--- a/USTD_Dev_all/templates/Academic_Early_Warning.html
+++ b/USTD_Dev_all/templates/Academic_Early_Warning.html
@@ -26,9 +26,9 @@
 			<div class="topbar-main">
 				<div class="container-fluid">
 					<!-- Logo container-->
-					<div class="logo"><a href="index.html" class="logo"><i
-								class="mdi mdi-bowling text-success mr-1"></i><span
-								class="hide-phone">大学生评估与预警系统</span></a></div><!-- End Logo container-->
+					<div class="logo"><a href="index" class="logo"><i
+							class="mdi mdi-bowling text-success mr-1"></i><span
+							class="hide-phone">大学生评估与预警系统</span></a></div><!-- End Logo container-->
 					<div class="menu-extras topbar-custom">
 						<ul class="list-inline float-right mb-0">
 							<!-- language-->
@@ -188,7 +188,12 @@
 											<font color="red">{{ minimum }}</font>/24</a>
 											{% endif %}
 										</td>
-										<td>是</td>
+										{% if minimum >= 24 %}
+										<td><font color="green">是</font></td>
+										{% endif %}
+										{% if minimum < 24 %}
+										<td><font color="red">否</font></td>
+										{% endif %}
 									</tr>
 									<tr>
 										<td>必修课成绩</td>
@@ -200,7 +205,12 @@
 											<font color="red">{{ compulsory }}</font>/20</a>
 											{% endif %}
 										</td>
-										<td>是</td>
+										{% if compulsory >= 20 %}
+										<td><font color="green">是</font></td>
+										{% endif %}
+										{% if compulsory < 20 %}
+										<td><font color="red">否</font></td>
+										{% endif %}
 									</tr>
 									<tr>
 										<td>选修课成绩</td>
@@ -212,7 +222,12 @@
 											<font color="red">{{ elective }}</font>/4</a>
 											{% endif %}
 										</td>
-										<td>是</td>
+										{% if elective >= 4 %}
+										<td><font color="green">是</font></td>
+										{% endif %}
+										{% if elective < 4 %}
+										<td><font color="red">否</font></td>
+										{% endif %}
 									</tr>
 									<tr>
 										<td>体测成绩</td>
@@ -226,21 +241,31 @@
 											<font color="red">{{ physical }}</font>/60</a>
 											{% endif %}
 										</td>
-													<td>是</td>
-										</tr>
-										<tr>
-											<td>四级成绩</td>
-											<td><a href="#" id="inline-siji" data-type="combodate"
-												   data-pk="1" data-title="">
-												{% if cet4 >= 425 %}
-												<font color="green">{{ cet4 }}</font>/425</a>
-												{% endif %}
-												{% if cet4 < 425 %}
-												<font color="red">{{ cet4 }}</font>/425</a>
-												{% endif %}
-											</td>
-													<td>是</td>
-										</tr>
+										{% if physical >= 60 %}
+										<td><font color="green">是</font></td>
+										{% endif %}
+										{% if physical < 60 %}
+										<td><font color="red">否</font></td>
+										{% endif %}
+									</tr>
+									<tr>
+										<td>四级成绩</td>
+										<td><a href="#" id="inline-siji" data-type="combodate"
+											   data-pk="1" data-title="">
+											{% if cet4 >= 425 %}
+											<font color="green">{{ cet4 }}</font>/425</a>
+											{% endif %}
+											{% if cet4 < 425 %}
+											<font color="red">{{ cet4 }}</font>/425</a>
+											{% endif %}
+										</td>
+										{% if cet4 >= 425 %}
+										<td><font color="green">是</font></td>
+										{% endif %}
+										{% if cet4 < 425 %}
+										<td><font color="red">否</font></td>
+										{% endif %}
+									</tr>
 										<tr>
 											<td>普通话成绩</td>
 											<td><a href="#" id="inline-putonghua" data-type="textarea" data-pk="1"
@@ -252,7 +277,12 @@
 												<font color="red">{{ mandarin }}</font>/80</a>
 												{% endif %}
 											</td>
-													<td>是</td>
+											{% if mandarin >= 80 %}
+											<td><font color="green">是</font></td>
+											{% endif %}
+											{% if mandarin < 80 %}
+											<td><font color="red">否</font></td>
+											{% endif %}
 										</tr>
 									</tbody>
 								</table>
