--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>大学生发展与评估系统</title>
+    <title>大学生综合素质测评系统</title>
     <meta content="Admin Dashboard" name="description">
     <meta content="Mannatthemes" name="author">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,12 +32,83 @@
                     <i class="mdi mdi-bowling text-success mr-1">
 
                     </i>
-                    <span class="hide-phone">大学生发展与评估系统</span>
+                    <span class="hide-phone">大学生综合素质测评系统</span>
                 </a>
             </div>
             <!-- End Logo container-->
             <div class="menu-extras topbar-custom">
                 <ul class="list-unstyled float-right mb-0">
+                    <!-- language-->
+                    <li class="list-inline-item dropdown notification-list hide-phone"><a
+                            class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown"
+                            href="#" role="button" aria-haspopup="false" aria-expanded="false">Chinese <img
+                            src="/static/picture/chinese_fiag.jpg" class="ml-2" height="16" alt=""></a>
+                        <div class="dropdown-menu dropdown-menu-right language-switch"><a class="dropdown-item"
+                                                                                          href="#"><img
+                                src="/static/picture/italy_flag.jpg" alt=""
+                                height="16"><span>Italian </span></a><a class="dropdown-item" href="#"><img
+                                src="/static/picture/french_flag.jpg" alt="" height="16"><span>French
+                        </span></a><a class="dropdown-item" href="#"><img
+                                src="/static/picture/spain_flag.jpg" alt="" height="16"><span>Spanish
+                        </span></a><a class="dropdown-item" href="#"><img
+                                src="/static/picture/russia_flag.jpg" alt="" height="16"><span>Russian
+                        </span></a></div>
+                    </li><!-- notification-->
+                    <li class="list-inline-item dropdown notification-list"><a
+                            class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown"
+                            href="#" role="button" aria-haspopup="false" aria-expanded="false"><i
+                            class="dripicons-mail noti-icon"></i><span
+                            class="badge badge-danger noti-icon-badge">5</span></a>
+                        <div class="dropdown-menu dropdown-menu-right dropdown-arrow dropdown-menu-lg border-0">
+                            <!-- item-->
+                            <div class="dropdown-item noti-title">
+                                <h5><span class="badge badge-danger float-right">745</span>Messages</h5>
+                            </div><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
+                            <div class="notify-icon"><img src="/static/picture/avatar-2.jpg" alt="user-img"
+                                                          class="img-fluid rounded-circle"></div>
+                            <p class="notify-details"><b>Charles M. Jones</b><small class="text-muted">Dummy
+                                text of the printing and typesetting industry.</small></p>
+                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
+                            <div class="notify-icon"><img src="/static/picture/avatar-3.jpg" alt="user-img"
+                                                          class="img-fluid rounded-circle"></div>
+                            <p class="notify-details"><b>Thomas J. Mimms</b><small class="text-muted">You
+                                have 87 unread messages</small></p>
+                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
+                            <div class="notify-icon"><img src="/static/picture/avatar-4.jpg" alt="user-img"
+                                                          class="img-fluid rounded-circle"></div>
+                            <p class="notify-details"><b>Luis M. Konrad</b><small class="text-muted">It is a
+                                long established fact that a reader will</small></p>
+                        </a><!-- All--><a href="javascript:void(0);" class="dropdown-item notify-item border-top">View
+                            All </a>
+                        </div>
+                    </li><!-- notification-->
+                    <li class="list-inline-item dropdown notification-list"><a
+                            class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown"
+                            href="#" role="button" aria-haspopup="false" aria-expanded="false"><i
+                            class="dripicons-bell noti-icon"></i><span
+                            class="badge badge-success noti-icon-badge">2</span></a>
+                        <div class="dropdown-menu dropdown-menu-right dropdown-arrow dropdown-menu-lg border-0">
+                            <!-- item-->
+                            <div class="dropdown-item noti-title">
+                                <h5>Notification(3)</h5>
+                            </div><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
+                            <div class="notify-icon bg-success"><i class="mdi mdi-cart-outline"></i></div>
+                            <p class="notify-details"><b>Your order is placed</b><small
+                                    class="text-muted">Dummy text of the printing and typesetting
+                                industry.</small></p>
+                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
+                            <div class="notify-icon bg-warning"><i class="mdi mdi-message"></i></div>
+                            <p class="notify-details"><b>New Message received</b><small
+                                    class="text-muted">You have 87 unread messages</small></p>
+                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
+                            <div class="notify-icon bg-info"><i class="mdi mdi-glass-cocktail"></i></div>
+                            <p class="notify-details"><b>Your class is updated</b><small
+                                    class="text-muted">It is a long established fact that a reader
+                                will</small></p>
+                        </a><!-- All--><a href="javascript:void(0);" class="dropdown-item notify-item border-top">View
+                            All </a>
+                        </div>
+                    </li><!-- User-->
                     <li class="dropdown notification-list">
                         <a class="nav-link dropdown-toggle arrow-none waves-effect nav-user" data-toggle="dropdown"
                            href="#" role="button" aria-haspopup="false" aria-expanded="false">
@@ -50,6 +121,9 @@
                                 <h5>Welcome,{{ name }}</h5>
                             </div>
                             <a class="dropdown-item" href="#">
+                                <i class="mdi mdi-account-circle m-r-5 text-muted">
+                                </i>用户信息</a>
+                            <a class="dropdown-item" href="#">
                                 <i class="mdi mdi-lock-open-outline m-r-5 text-muted">
                                 </i>切换用户</a>
                             <a class="dropdown-item" href="#">
@@ -58,7 +132,7 @@
                             </a>
                             <div class="dropdown-divider">
                             </div>
-                            <a class="dropdown-item" href="#">
+                            <a class="dropdown-item" href="http://127.0.0.1:8000/">
                                 <i class="mdi mdi-logout m-r-5 text-muted">
                                 </i>退出登录
                             </a>
@@ -91,7 +165,7 @@
                 <!-- Navigation Menu-->
                 <ul class="navigation-menu">
                     <li class="has-submenu">
-                        <a href="">
+                        <a href="http://127.0.0.1:8000/login/index.html">
                             <i class="dripicons-device-desktop">
                             </i>主页
                         </a>
@@ -184,6 +258,22 @@
                                     </li>
                                     <li>
                                         <a href="javascript:;">Vector Map</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="has-submenu">
+                        <a href="#">
+                            <i class="dripicons-blog">
+
+                            </i>评分准则
+                        </a>
+                        <ul class="submenu megamenu">
+                            <li>
+                                <ul>
+                                    <li>
+                                        <a href="form-editors.html">五大方面评分准则</a>
                                     </li>
                                 </ul>
                             </li>
