--- a/USTD_Dev_all/templates/login.html
+++ b/USTD_Dev_all/templates/login.html
@@ -4,7 +4,7 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=1280,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
-    <title>学校网站登录页面模板html源码</title>
+    <title>大学生综合素质测评系统</title>
     <link href="/static/css/vendor.style.css" rel="stylesheet">
     <link href="/static/css/login.style.css" rel="stylesheet">
 </head>
@@ -31,7 +31,7 @@
                         </div>
                     </div>
                     <div class="_6vZdUKmPDGrrza0LnuXD9">
-                        <input type="submit" value="登录" class="_2ZggRBvDTyawWaQQ6ambu4">登录</a>
+                        <input type="submit" value="登录" class="_2ZggRBvDTyawWaQQ6ambu4"></a>
                     </div>
                 </form>
 
