提交材料界面用户退出功能完善，部分代码格式规范化调整

--- a/USTD_Dev_all/templates/login.html
+++ b/USTD_Dev_all/templates/login.html
@@ -31,7 +31,7 @@
                         </div>
                     </div>
                     <div class="_6vZdUKmPDGrrza0LnuXD9">
-                        <input type="submit" value="登录" class="_2ZggRBvDTyawWaQQ6ambu4"></a>
+                        <input type="submit" value="登录" class="_2ZggRBvDTyawWaQQ6ambu4"/>
                     </div>
                 </form>
 
