用户信息界面以及跳转

--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -32,7 +32,7 @@
                     <i class="mdi mdi-bowling text-success mr-1">
 
                     </i>
-                    <span class="hide-phone">大学生综合素质测评系统</span>
+                    <span class="hide-phone">大学生发展综合素质测评系统</span>
                 </a>
             </div>
             <!-- End Logo container-->
@@ -120,7 +120,7 @@
                             <div class="dropdown-item noti-title">
                                 <h5>Welcome,{{ name }}</h5>
                             </div>
-                            <a class="dropdown-item" href="#">
+                            <a class="dropdown-item" href="http://127.0.0.1:8000/login/index/infor.html">
                                 <i class="mdi mdi-account-circle m-r-5 text-muted">
                                 </i>用户信息</a>
                             <a class="dropdown-item" href="#">
