修复主页因地址问题最高成绩显示bug，修复用户信息页面bug

--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -120,7 +120,7 @@
                             <div class="dropdown-item noti-title">
                                 <h5>Welcome,{{ name }}</h5>
                             </div>
-                            <a class="dropdown-item" href="http://127.0.0.1:8000/login/index/infor.html">
+                            <a class="dropdown-item" href="/login/infor.html">
                                 <i class="mdi mdi-account-circle m-r-5 text-muted">
                                 </i>用户信息</a>
                             <a class="dropdown-item" href="#">
