--- a/USTD_Dev_all/templates/infor.html
+++ b/USTD_Dev_all/templates/infor.html
@@ -9,9 +9,9 @@
 		<meta content="Mannatthemes" name="author">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<link rel="shortcut icon" href="https://www.17sucai.com/2022/5/ekow512451/assets/images/favicon.ico">
-		<link href="static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-		<link href="static/css/icons.css" rel="stylesheet" type="text/css">
-		<link href="static/css/style.css" rel="stylesheet" type="text/css">
+		<link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+		<link href="/static/css/icons.css" rel="stylesheet" type="text/css">
+		<link href="/static/css/style.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<!-- Loader -->
@@ -54,18 +54,18 @@
 									<div class="dropdown-item noti-title">
 										<h5><span class="badge badge-danger float-right">745</span>Messages</h5>
 									</div><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
-										<div class="notify-icon"><img src="static/picture/avatar-2.jpg" alt="user-img"
-												class="img-fluid rounded-circle"></div>
+									<div class="notify-icon"><img src="/static/picture/avatar-2.jpg" alt="user-img"
+																  class="img-fluid rounded-circle"></div>
 										<p class="notify-details"><b>Charles M. Jones</b><small class="text-muted">Dummy
 												text of the printing and typesetting industry.</small></p>
 									</a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
-										<div class="notify-icon"><img src="static/picture/avatar-3.jpg" alt="user-img"
-												class="img-fluid rounded-circle"></div>
+									<div class="notify-icon"><img src="/static/picture/avatar-3.jpg" alt="user-img"
+																  class="img-fluid rounded-circle"></div>
 										<p class="notify-details"><b>Thomas J. Mimms</b><small class="text-muted">You
 												have 87 unread messages</small></p>
 									</a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
-										<div class="notify-icon"><img src="static/picture/avatar-4.jpg" alt="user-img"
-												class="img-fluid rounded-circle"></div>
+									<div class="notify-icon"><img src="/static/picture/avatar-4.jpg" alt="user-img"
+																  class="img-fluid rounded-circle"></div>
 										<p class="notify-details"><b>Luis M. Konrad</b><small class="text-muted">It is a
 												long established fact that a reader will</small></p>
 									</a><!-- All--><a href="javascript:void(0);"
@@ -102,15 +102,15 @@
 							<li class="dropdown notification-list"><a
 									class="nav-link dropdown-toggle arrow-none waves-effect nav-user"
 									data-toggle="dropdown" href="#" role="button" aria-haspopup="false"
-									aria-expanded="false"><img src="static/picture/avatar-1.jpg" alt="user"
-										class="rounded-circle"></a>
+									aria-expanded="false"><img src="/static/picture/avatar-1.jpg" alt="user"
+															   class="rounded-circle"></a>
 										<span>{{ name }}</span>
 								<div class="dropdown-menu dropdown-menu-right profile-dropdown  border-0">
 									<!-- item-->
 									<div class="dropdown-item noti-title">
 										<h5>Welcome,{{ name }}</h5>
 									</div>
-									<a class="dropdown-item" href="#">
+									<a class="dropdown-item" href="http://127.0.0.1:8000/login/infor.html">
 										<i class="mdi mdi-account-circle m-r-5 text-muted">
 										</i>用户信息</a>
 									<a class="dropdown-item" href="#">
@@ -344,7 +344,7 @@
 		    </div><!-- end container -->
 		</div><!-- end wrapper -->
 		<!-- Footer -->
-		
+
 		<footer class="footer">
 			<div class="container-fluid">
 				<div class="row">
@@ -353,17 +353,17 @@
 			</div>
 		</footer><!-- End Footer -->
 		<!-- jQuery -->
-		<script src="static/js/jquery.min.js"></script>
-		<script src="static/js/popper.min.js"></script>
-		<script src="static/js/bootstrap.min.js"></script>
-		<script src="static/js/modernizr.min.js"></script>
-		<script src="static/js/waves.js"></script>
-		<script src="static/js/jquery.slimscroll.js"></script>
-		<script src="static/js/jquery.nicescroll.js"></script>
-		<script src="static/js/jquery.scrollTo.min.js"></script><!-- KNOB JS -->
-		<script src="static/js/excanvas.js"></script>
-		<script src="static/js/jquery.knob.js"></script><!-- App js -->
-		<script src="static/js/app.js"></script>
+		<script src="/static/js/jquery.min.js"></script>
+		<script src="/static/js/popper.min.js"></script>
+		<script src="/static/js/bootstrap.min.js"></script>
+		<script src="/static/js/modernizr.min.js"></script>
+		<script src="/static/js/waves.js"></script>
+		<script src="/static/js/jquery.slimscroll.js"></script>
+		<script src="/static/js/jquery.nicescroll.js"></script>
+		<script src="/static/js/jquery.scrollTo.min.js"></script><!-- KNOB JS -->
+		<script src="/static/js/excanvas.js"></script>
+		<script src="/static/js/jquery.knob.js"></script><!-- App js -->
+		<script src="/static/js/app.js"></script>
 	</body>
 </html>
-<script src="static/js/console-ban.min.js"></script>
+<script src="/static/js/console-ban.min.js"></script>
